# cpp-repo

./: .gitignore  CMakeLists.txt  README.md  build-debug.ps1  build-debug.sh  build-lib.sh  build-release.ps1  build-release.sh  build.ps1  build.sh  clean-debug.ps1  clean-debug.sh  clean-release.ps1  clean-release.sh  clean.ps1  clean.sh  git-init.sh  git-push.ps1  git-push.sh  lib.cmake  rebuild-debug.ps1  rebuild-debug.sh  rebuild-release.ps1  rebuild-release.sh  run-debug.ps1  run-debug.sh  run-release.ps1  run-release.sh
include/: main.h
source/: main.cpp
