cmake_minimum_required(VERSION 3.0)
get_filename_component(PROJECT_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
project(${PROJECT_NAME} LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
include_directories(include)
#include_directories(include/${PROJECT_NAME})
include_directories(tests)
#aux_source_directory(source/${PROJECT_NAME} SOURCE_DIR)
aux_source_directory(source SOURCE_DIR)
aux_source_directory(tests TESTS_DIR)
add_executable(${PROJECT_NAME} ${SOURCE_DIR} ${TESTS_DIR})
if(MSVC)
    add_compile_options(/utf-8)
endif()
